--- a/share/spack/gitlab/cloud_pipelines/stacks/e4s/spack.yaml
+++ b/share/spack/gitlab/cloud_pipelines/stacks/e4s/spack.yaml
@@ -68,7 +68,7 @@ spack:
   - dyninst
   - ecp-data-vis-sdk ~cuda ~rocm +adios2 +ascent +cinema +darshan +faodel +hdf5 +paraview +pnetcdf +sz +unifyfs +veloc +visit +vtkm +zfp
   - exaworks
-  - flecsi
+  - flecsi@2.1.0
   - flit
   - flux-core
   - fortrilinos
@@ -157,7 +157,7 @@ spack:
   - cusz +cuda
   - dealii +cuda
   - ecp-data-vis-sdk +cuda +adios2 +hdf5 +paraview +vtkm +zfp # Removing ascent because Dray is hung in CI. +ascent
-  - flecsi +cuda
+  - flecsi@2.1.0 +cuda
   - flux-core +cuda
   - ginkgo +cuda
   - heffte +cuda
