--- a/share/spack/gitlab/cloud_pipelines/stacks/e4s-oneapi/spack.yaml
+++ b/share/spack/gitlab/cloud_pipelines/stacks/e4s-oneapi/spack.yaml
@@ -1,43 +1,31 @@
 spack:
   view: false
+
+  concretizer:
+    reuse: false
+    unify: false
+
   compilers:
   - compiler:
-      spec: dpcpp@2023.0.0
-      paths:
-        cc: /opt/intel/oneapi/compiler/2023.0.0/linux/bin/icx
-        cxx: /opt/intel/oneapi/compiler/2023.0.0/linux/bin/dpcpp
-        f77: /opt/intel/oneapi/compiler/2023.0.0/linux/bin/ifx
-        fc: /opt/intel/oneapi/compiler/2023.0.0/linux/bin/ifx
-      flags: {}
-      operating_system: ubuntu20.04
-      target: x86_64
-      modules: [compiler]
-      environment:
-        prepend_path:
-          LD_LIBRARY_PATH: /opt/intel/oneapi/compiler/2023.0.0/linux/compiler/lib/intel64_lin
-      extra_rpaths: []
-  - compiler:
-      spec: oneapi@2023.0.0
-      paths:
-        cc: /opt/intel/oneapi/compiler/2023.0.0/linux/bin/icx
-        cxx: /opt/intel/oneapi/compiler/2023.0.0/linux/bin/icpx
-        f77: /opt/intel/oneapi/compiler/2023.0.0/linux/bin/ifx
-        fc: /opt/intel/oneapi/compiler/2023.0.0/linux/bin/ifx
-      flags: {}
-      operating_system: ubuntu20.04
-      target: x86_64
-      modules: [compiler]
-      environment:
-        prepend_path:
-          LD_LIBRARY_PATH: /opt/intel/oneapi/compiler/2023.0.0/linux/compiler/lib/intel64_lin
-      extra_rpaths: []
-  - compiler:
-      spec: gcc@11.1.0
+      spec: gcc@=11.1.0
       paths:
         cc: /usr/bin/gcc
         cxx: /usr/bin/g++
         f77: /usr/bin/gfortran
         fc: /usr/bin/gfortran
+      flags: {}
+      operating_system: ubuntu20.04
+      target: x86_64
+      modules: []
+      environment: {}
+      extra_rpaths: []
+  - compiler:
+      spec: oneapi@=2023.1.0
+      paths:
+        cc: /opt/intel/oneapi/compiler/2023.1.0/linux/bin/icx
+        cxx: /opt/intel/oneapi/compiler/2023.1.0/linux/bin/icpx
+        f77: /opt/intel/oneapi/compiler/2023.1.0/linux/bin/ifx
+        fc: /opt/intel/oneapi/compiler/2023.1.0/linux/bin/ifx
       flags: {}
       operating_system: ubuntu20.04
       target: x86_64
@@ -89,8 +77,6 @@ spack:
     krb5:
       require: '%gcc'
     llvm:
-      require: '%gcc'
-    m4:
       require: '%gcc'
     openssh:
       require: '%gcc'
@@ -268,7 +254,7 @@ spack:
   ci:
     pipeline-gen:
     - build-job:
-        image: ecpe4s/ubuntu20.04-runner-x86_64-oneapi:2023-01-01
+        image: ecpe4s/ubuntu20.04-runner-x86_64-oneapi:2023-05-10
 
   cdash:
     build-group: E4S OneAPI
